[package]
name = "hieroxide"
version = "0.1.0"
edition = "2024"

#[workspace]
#resolver = "3"
#members = ["hieroxide"]

[lib]
name = "hieroxide"
path = "hieroxide/src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
phf = { version = "0.13.1", features = ["macros"] }
regex = "1.12.2"
regex_static = "0.1.1"
